sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: ';' expected but 'if' found.
} if (trié==false) {return -1}
  ^